# math

./: .gitmodules  CMakeLists.txt  Doxyfile
include/xitren/math/: bezier.hpp  branchless.hpp  fir.hpp  fir_fast.hpp  kht_opt.hpp  matrix.hpp  matrix_classic.hpp  matrix_strassen.hpp  optimization.hpp  pid.hpp  pid2.hpp  spid.hpp
tests/: CMakeLists.txt  math_bezier_test.cpp  math_branchless.cpp  math_fir_test.cpp  math_kht_test.cpp  math_matrix_big_test.cpp  math_matrix_power2_double_test.cpp  math_matrix_power2_int_test.cpp  math_matrix_power2_uint8_test.cpp  math_matrix_test.cpp  math_optimization_test.cpp  math_pid2_test.cpp  math_pid_test.cpp  matrix_bench.txt
